--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,26 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    background-color: tomato;
-  }
-  
+  min-height: 100vh;
+  font-size: 13px;
+  font-family: 'Manrope', sans-serif;
+  background-color: hsl(210, 46%, 95%);
+  color: hsl(217, 19%, 35%);
+}
+
+h1 {
+  font-size: 13px;
+  padding: 0.5em;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  color: none;
+}
